src/objects/Brackets_Team__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Team full description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <inlineHelpText>Team ranking</inlineHelpText>
        <label>Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <inlineHelpText>Short name (max 9 chars) to show on predictions tree</inlineHelpText>
        <label>Short Name</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ShortName__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RankGreaterOrEqualThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>Rank__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Rank__c</errorDisplayField>
        <errorMessage>This value must be greater or equal than zero.</errorMessage>
    </validationRules>
</CustomObject>